# rules_ts_example

./: .bazelignore  .gitignore  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
foo/: BUILD.bazel  package.json  tsconfig.json
foo/src/: index.tsx
